examples/drupal-k8s-ingress/drupal-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: drupal
  namespace: drupal
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: drupal
