examples/drupal-k8s-ingress/drupal-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drupal
  namespace: drupal
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: drupal.example.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: drupal
              port:
                number: 80
